--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,1 +1,3 @@
-FROM openjdk:19-jdk-slim
+FROM eclipse-temurin:21-jre-jammy
+COPY shareit-server/target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
