--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,11 @@
     <artifactId>shareit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ShareIt</name>
-    <packaging>pom</packaging>
-
     <modules>
-        <module>shareit-server</module>
-        <module>shareit-gateway</module>
+        <module>gateway</module>
+        <module>server</module>
     </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>19</java.version>
