--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 logging.level.ru.practicum.shareit=DEBUG
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
