--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.ru.practicum.shareit=DEBUG
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
