Реализация Проект ShareIt. Часть 3 - fix9 actuator

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>shareit-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!-- Зависимость для тестов -->
         <dependency>
