--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>3.3.2</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
